@@ -1,3 +1,12 @@
+jilles      2006/08/14 14:05:41 UTC	(20060814-6035)
+  Log:
+  postgresql backend: unbreak compile, note that it is not otherwise tested!
+  
+
+  Changes:	Modified:
+  +49 -57	trunk/backend/postgresql.c (File Modified) 
+
+
 nenolod     2006/08/13 21:06:56 UTC	(20060813-6033)
   Log:
   - LoveServ implementation
